1. document title 수정 2. audio, video file update 3. table markup 4. media markup 5. 약어, 연락처, 포맷 markup 업데이트

--- a/Markup/Image(이미지).html
+++ b/Markup/Image(이미지).html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>이미지</title>
 </head>
 <body>
     <img src="https://postfiles.pstatic.net/20140115_149/piorezero_1389775176973XihoE_JPEG/%B7%AF%BA%EA%B6%F3%C0%CC%BA%EA_%B4%CF%C4%DA_%B4%E3%B9%E8_%B5%B7_%BB%E6%B6%E2%B1%E2_01.jpg?type=w1" alt="니코">
