--- a/Markup/HeadingParagraph(제목과 문단).html
+++ b/Markup/HeadingParagraph(제목과 문단).html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HeadingParagraph</title>
+    <title>제목과 문단</title>
 </head>
 
 <body>
