--- a/Markup/Table(심화).html
+++ b/Markup/Table(심화).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>테이블 심화</title>
-    <link rel="stylesheet" href="../Css/tableStyle.css">
+    <link rel="stylesheet" href="./tableStyle.css">
 </head>
 <body>
     <!--
