html markup 위치 변경 1. gitHub Dropdown Markup 작성 2. input Group Markup 작성

--- a/Markup/instargramProfile.html
+++ b/Markup/instargramProfile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instargram-Profile</title>
-    <link rel="stylesheet" href="../html_Css/instargramProfile.css">
+    <link rel="stylesheet" href="./instargramProfile.css">
 </head>
 <body>
     <!-- 
