--- a/Markup/Breadcrumb&Pagination.html
+++ b/Markup/Breadcrumb&Pagination.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breadcrumb&amp;Pagination</title>
-    <link rel="stylesheet" href="../html_Css/Breadcrumb&Pagination.css">
+    <link rel="stylesheet" href="./Breadcrumb&Pagination.css">
 </head>
 <body>
     <div class="breadcrumb">
