--- a/Markup/adBanner.html
+++ b/Markup/adBanner.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="../html_Css/adBanner.css"> -->
+    <!-- <link rel="stylesheet" href="./adBanner.css"> -->
     <title>광고배너</title>
 </head>
 <body>
