--- a/Markup/featureBox.html
+++ b/Markup/featureBox.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>featureBox</title>
-    <link rel="stylesheet" href="../html_Css/featrueBox.css">
+    <link rel="stylesheet" href="./featrueBox.css">
 </head>
 <body>
     <div class="feature-box">
