--- a/Markup/logoInHead.html
+++ b/Markup/logoInHead.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LogoInHead</title>
-    <link rel="stylesheet" href="../html_Css/logoInHead.css">
+    <link rel="stylesheet" href="./logoInHead.css">
 </head>
 <body>
     <div class="header">
