--- a/Markup/productCard.html
+++ b/Markup/productCard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Card</title>
-    <link rel="stylesheet" href="../html_Css/productCard.css">
+    <link rel="stylesheet" href="./productCard.css">
     <!-- Place your kit's code here -->
     <script src="https://kit.fontawesome.com/6ffcef61f7.js" crossorigin="anonymous"></script>
 </head>
