--- a/Markup/receipt.html
+++ b/Markup/receipt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receipt</title>
-    <link rel="stylesheet" href="../html_Css/receipt.css">
+    <link rel="stylesheet" href="./receipt.css">
 </head>
 <body>
     <!-- 
